# social_support_automation

./: .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  SAMPLE_DATA_GUIDE.md  docker-compose.yml  pyproject.toml  setup.sh  solution_summary.docx
data/samples/Ahmed_Al_Mansoori/: assets_liabilities_784198866123451.xlsx
data/samples/Aisha_Al_Ketbi/: assets_liabilities_784199666012341.xlsx
data/samples/Fatima_Al_Zaabi/: assets_liabilities_784199277234562.xlsx
data/samples/Hamda_Al_Rashid/: assets_liabilities_784199311456785.xlsx
data/samples/Hassan_Al_Blooshi/: assets_liabilities_784199088345673.xlsx
data/samples/Khalid_Al_Marri/: assets_liabilities_784198511567895.xlsx
data/samples/Layla_Al_Otaibi/: assets_liabilities_784199188234563.xlsx
docs/: e2e_test_report.txt  evaluation_report.md  solution_summary.md
seeder/: main.py  registry.py
src/agents/: chat_agent.py  decision_agent.py  eligibility_agent.py  extraction_agent.py  llm.py  orchestrator.py  validation_agent.py
src/api/: auth.py  main.py  schemas.py
src/config/: prompts.py  settings.py
src/data/: embeddings.py  programs.py  registry.py  rubric.py  synthetic.py
src/extraction/: __init__.py  excel.py  image_ocr.py  pdf.py
src/governance/: audit.py  bias.py  pii.py  tracing.py
src/graph/: state.py  workflow.py
src/models/: classifier.py
src/storage/: mongo.py  neo4j.py  postgres.py  qdrant.py
src/ui/: app.py
tests/: e2e_test.py  evals.py  ocr_smoke_test.py  test_api.py  test_eligibility.py  test_ocr.py
(+8 files in other folders)
