[project]
name = "social-support-workflow-automation"
version = "0.1.0"
description = "AI workflow automating social-support application decisions for a government social security department"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Suvojit Hore" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.38",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "langfuse>=2.13",
    "ollama>=0.3",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pypdf>=4.0",
    "pillow>=10.4",
    "pytesseract>=0.3",
    "pymongo>=4.8",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "neo4j>=5.23",
    "qdrant-client>=1.10",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "tenacity>=8.5",
    "numpy>=1.26",
    "Faker>=26.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
